# pytest-ekstazi

./: .gitignore  LICENSE  README.rst  deps.json  mkdocs.yml  pyproject.toml  pytest.ini  scalpel_playgroud.py  tox.ini
.github/workflows/: main.yml
docs/: index.md
src/pytest_ekstazi/: plugin.py
tests/: test_ekstazi.py  test_ekstazi2.py
tests/multiple-files/: a.py  b.py  main.py
tests/multiple_files/: __init__.py  a.py  b.py  main.py
